--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,9 @@ plugins {
 	id 'java'
 }
 
+apply plugin: 'io.spring.dependency-management'
+apply plugin: 'jacoco'
+
 group = 'com.ejercicio'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
@@ -20,12 +23,19 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.flywaydb:flyway-core'
-	compileOnly 'org.projectlombok:lombok'
+	implementation 'org.springframework.boot:spring-boot-starter-web-services'
+	implementation 'org.apache.axis:axis:1.4'
+	implementation 'javax.xml:jaxrpc-api:1.1'
+	testImplementation "org.flywaydb.flyway-test-extensions:flyway-spring-test:5.2.1"
+	testImplementation 'org.flywaydb:flyway-core:5.2.1'
+	implementation 'commons-discovery:commons-discovery:0.5'
 	runtimeOnly 'com.h2database:h2'
-	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'org.mockito:mockito-all:1.10.19'
+	testImplementation 'org.powermock:powermock-api-mockito:1.6.4'
+	testImplementation 'org.powermock:powermock-module-junit4:1.6.4'
 }
 
 tasks.named('test') {
